icon spacing fix

--- a/styles/header_contact.css
+++ b/styles/header_contact.css
@@ -28,6 +28,7 @@ header {
     max-height: 1.5rem;
     width: auto;
     margin: 0;
+    padding-right: 1rem;
 }
 
 .contacts div {
